# app.js
@@ -1,6 +1,10 @@
 import { config } from "dotenv";
 import express from "express";
 import userRoutes from "./routes/userRoutes.js";
+import adminRoutes from "./routes/adminRoutes.js";
+import dummyRoutes from "./routes/dummyRoutes.js";
+import carRoutes from "./routes/carsRoutes.js";
+import dealershipRoutes from "./routes/dealershipRouters.js";
 import cors from "cors";
 import fileUpload from "express-fileupload";
 import bodyParser from "body-parser";
@@ -8,14 +12,13 @@ import { errorMiddleware } from "./middleware/error.js";
 import swaggerUi from "swagger-ui-express";
 import YAML from "yamljs";
 import morgan from "morgan";
+
 // import adminRoutes from "./routes/adminRoutes.js"
 // import carsRoutes from "./routes/carsRoutes.js"
 
 export const app = express();
 // configurations
-config({
-  path: "./config/config.env",
-});
+config();
 const apiDocs = YAML.load("./api-docs.yaml");
 
 // middlewares
@@ -27,23 +30,9 @@ app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(apiDocs));
 app.use(errorMiddleware);
 app.use(morgan("dev"));
 
-//routes
-// app.use("/api", adminRoutes);
-// app.use("/api", carsRoutes);
-
-// app.use("/api", dealershipRoutes);
-// app.use("/api", dealRoutes);
-// app.use("/api", soldVehiclesRoutes);
-// app.use("/api", userRoutes);
-
-// app.use('/api/admins', adminRoutes);
-// app.use('/api/users', userRoutes);
-// app.use('/api/dealerships', dealershipRoutes);
-// app.use('/api/deals', dealRoutes);
-// app.use('/api/cars', carsRoutes);
-// app.use('/api/sold-vehicles', soldVehiclesRoutes);
-
 // Routes
-// app.use('/api/admins', adminRoutes);
 app.use("/api/users", userRoutes);
-// app.use('/api/dealerships', dealershipRoutes);
+app.use("/api/dealership", dealershipRoutes);
+app.use("/api/admin", adminRoutes);
+app.use("/api/dummyData", dummyRoutes);
+app.use("/api/cars", carRoutes);
